# epub-rs

./: .gitignore  Cargo.toml
benches/: epub_benchmark.rs
src/: archive.rs  doc.rs  error.rs  lib.rs  utils.rs  xmlutils.rs
src/parsers/: mod.rs  v2.rs  v3.rs
tests/: archive.rs  doc.rs  read.rs
tests/docs/: charles-dickens_a-christmas-carol.epub  herman-melville_moby-dick.epub  winnie_the_pooh.epub
tests/parsers/: v3.rs
