[package]
authors = ["Daniel García Moreno <danigm@wadobo.com>", "Hirtol <epub@hirtol.top>"]
description = """
Library to support the reading of epub files.
"""
documentation = "https://docs.rs/epub/"
exclude = ["test.epub"]
keywords = [
    "epub",
    "ebook",
]
license = "GPL-3.0"
name = "epub"
repository = "https://github.com/danigm/epub-rs.git"
version = "1.2.3"
edition = "2018"

[dependencies]
regex = "1.4.2"
xml-rs = "0.8.3"
zip = { version = "0.6.4", default-features = false, features = ["deflate", "bzip2"]}
percent-encoding = "2.1.0"
thiserror = "1.0.38"
encoding_rs = "0.8.32"
roxmltree = "0.18.0"
lol_html = "0.3.2"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "epub_benchmark"
harness = false
