[package]
authors = ["Daniel García Moreno <danigm@wadobo.com>", "Hirtol <epub@hirtol.top>"]
description = """
Library to support the reading of epub files.
"""
documentation = "https://docs.rs/epub/"
exclude = ["test.epub"]
keywords = [
    "epub",
    "ebook",
]
license = "GPL-3.0"
name = "epub"
repository = "https://github.com/danigm/epub-rs.git"
version = "2.0.0"
edition = "2018"

[dependencies]
zip = { version = "0.6.4", default-features = false, features = ["deflate", "bzip2"]}
percent-encoding = "2.1.0"
thiserror = "1.0.38"
encoding_rs = "0.8.32"
roxmltree = "0.18.0"
lol_html = "1.0.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "epub_benchmark"
harness = false
